distros/M/Module-Build-Kwalitee/tests/fail_compile/lib/MBKFail.pm
package MBKFail;
use strict;
use warnings;
our $VERSION = 1;

my ;

1;
